--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,6 +3,13 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <div>
+    <%= form_with url: search_index_path, method: :get, local: true do |f| %>
+      <%= f.text_field :search %>
+      <%= f.text_field :specialty, placeholder: :specialty%>
+      <%= f.submit  :search , class:"submit" %>
+    <% end %>
+  </div>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <ul class="navbar-nav ml-auto">
       <% if user_signed_in? %>
