--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,7 +6,7 @@
   <div>
     <%= form_with url: search_index_path, method: :get, local: true do |f| %>
       <%= f.text_field :search %>
-      <%= f.text_field :specialty, placeholder: :specialty%>
+      <%= f.select :specialty, [["All", "*"], ["Specialty1", "specialty1"], ["Specialty2", "specialty2"], ["Specialty3", "specialty3"], ["Specialty4", "specialty4"], ["Specialty5", "specialty5"], ]%>
       <%= f.submit  :search , class:"submit" %>
     <% end %>
   </div>
