added more placeholders

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,2 +1,2 @@
-<% render 'patient' if current_user.patient? %>
-<% render 'therapist' if current_user.therapist? %>
+<%= render 'patient' if current_user.patient? %>
+<%= render 'therapist' if current_user.therapist? %>
