--- a/app/views/therapists/_form.html.erb
+++ b/app/views/therapists/_form.html.erb
@@ -1,41 +1,41 @@
 <%= form_with(model: therapist, local: true) do |form| %>
   <h3>Age Groups</h3>
-    <%= form.label :adults %>
-    <%= form.check_box :adults %>
-    <%= form.label :children %>
-    <%= form.check_box :children %>
+    <%= form.label :adults, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :adults, class: "sr-only" %>
+    <%= form.label :children, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :children, class: "sr-only" %>
   <h3>Disorder</h3>
-    <%= form.label :development_delays %>
-    <%= form.check_box :development_delays %>
-    <%= form.label :cerebral_palsy %>
-    <%= form.check_box :cerebral_palsy %>
-    <%= form.label :autism %>
-    <%= form.check_box :autism %>
-    <%= form.label :down_syndrome %>
-    <%= form.check_box :down_syndrome %>
+    <%= form.label :development_delays, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :development_delays, class: "sr-only" %>
+    <%= form.label :cerebral_palsy, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :cerebral_palsy, class: "sr-only" %>
+    <%= form.label :autism, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :autism, class: "sr-only" %>
+    <%= form.label :down_syndrome, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :down_syndrome, class: "sr-only" %>
   <h3>Speech</h3>
-    <%= form.label :speech %>
-    <%= form.check_box :speech %>
-    <%= form.label :language_development %>
-    <%= form.check_box :language_development %>
-    <%= form.label :voice %>
-    <%= form.check_box :voice %>
-    <%= form.label :stuttering %>
-    <%= form.check_box :stuttering %>
+    <%= form.label :speech, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :speech, class: "sr-only" %>
+    <%= form.label :language_development, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :language_development, class: "sr-only" %>
+    <%= form.label :voice, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :voice, class: "sr-only" %>
+    <%= form.label :stuttering, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :stuttering, class: "sr-only" %>
   <h3>Motor & Sensory</h3>
-    <%= form.label :fine_motor_skills %>
-    <%= form.check_box :fine_motor_skills %>
-    <%= form.label :feeding_and_swallowing %>
-    <%= form.check_box :feeding_and_swallowing %>
-    <%= form.label :sensory_processing %>
-    <%= form.check_box :sensory_processing %>
+    <%= form.label :fine_motor_skills, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :fine_motor_skills, class: "sr-only" %>
+    <%= form.label :feeding_and_swallowing, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :feeding_and_swallowing, class: "sr-only" %>
+    <%= form.label :sensory_processing, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :sensory_processing, class: "sr-only" %>
   <h3>Communication & Behaviour</h3>
-    <%= form.label :literacy %>
-    <%= form.check_box :literacy %>
-    <%= form.label :behaviour_support %>
-    <%= form.check_box :behaviour_support %>
-    <%= form.label :aac_and_multimodal_communication %>
-    <%= form.check_box :aac_and_multimodal_communication %>
+    <%= form.label :literacy, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :literacy, class: "sr-only" %>
+    <%= form.label :behaviour_support, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :behaviour_support, class: "sr-only" %>
+    <%= form.label :aac_and_multimodal_communication, class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+    <%= form.check_box :aac_and_multimodal_communication, class: "sr-only" %>
     <div>
       <%= form.submit :submit %>
     </div>
