--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,27 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<p>Testing testing</p>
+<div class="text-center landing-wrapper">
+    <div class="inner-cover">
+        <div class="inner-text">
+            <h1 class="cover-heading text-light">Welcome to Umbo</h1>
+            <p class="lead text-light">Find a therapist that's right for you, not just close to you.</p>
+            <p class="lead">
+                <a href="info" class="btn btn-lg btn-secondary">Learn more</a>
+            </p>
+        </div>
+    </div>
+</div>
+<div class="learn-more">
+    <p class="lead-text text-light">
+    Allied health services such as speech and occupational therapy enable people to participate in society better - 
+through access to education, employment and social interactions. In rural and remote Australia, children in need are often unable to these services.
+
+Enter Umbo.
+
+Umbo matches a clinician in city to a family in the bush to deliver therapy through an online platform.
+
+We support children to access vital therapy regardless of where they live, whilst also giving therapists the option of working from home - 
+whenever they like, for as many or as few hours as they like. Families who have NDIS funding are able to use this funding to connect with an Umbo therapist.
+
+We do it through an integrated solution which combines video calling, record keeping and goal setting, 
+the ability to transfer files and share therapy resources, and track progress through gamification
+    </p>
+</div>
