--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -15,15 +15,15 @@
 
       <div class="form-group">
         <%= f.label :gender, class: "sr-only" %>
-        <%= f.number_field :gender, placeholder: "Gender", class: "form-control" %>
+        <%= f.select(:gender, [["male", 'male'],["female", 'female']],{}, {class: "form-control"}) %>
       </div>
       <div class="form-group">
         <%= f.label :dob, class: "sr-only" %>
         <%= f.date_field :dob, placeholder: "Date of birth", class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :ndis_status, class: "sr-only" %>
-        <%= f.text_field :ndis_status, placeholder: "Ndis Statsu", class: "form-control" %>
+        <%= f.label :ndis_status, class: ""%>
+        <%= f.check_box :ndis_status, class: "form-control" %>
       </div>
        <div class="form-group">
         <%= f.label :ndis_number, class: "sr-only" %>
