landing page update

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -9,23 +9,30 @@
     position: relative; 
 }
 
+.landing-inner-text{
+    text-shadow: 2px 1px 4px #000000
+}
+
+
 .learn-more{
     background: image-url('background2.jpg');
     background-size: cover;
     background-position: center;
     width: 100vw;
     height: 100vh;
-    vertical-align: middle;
     display: block;
     position: relative; 
-    text-align: center;
 }
 
 .learn-more-text{
     width: 100vw;
     height: 100vh;
+    vertical-align: middle;
     display: table-cell;
     text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    text-shadow: 2px 1px 4px #000000
 }
 
 .cover-heading{
