--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,17 @@
 <div class="text-center landing-wrapper">
-    <div class="inner-cover">
-        <div class="inner-text">
+    <div class="landing-inner-cover">
+        <div class="landing-inner-text">
             <h1 class="cover-heading text-light">Welcome to Umbo</h1>
-            <p class="lead text-light">Find a therapist that's right for you, not just close to you.</p>
+            <h2 class="lead text-light">Find a therapist that's right for you, not just close to you.</h2>
             <p class="lead">
-                <a href="info" class="btn btn-lg btn-secondary">Learn more</a>
+                <a href="#learn-more" class="btn btn-lg btn-secondary">Learn more</a>
             </p>
         </div>
     </div>
 </div>
-<div class="learn-more">
+<div class="learn-more" id="learn-more">
     <div class="learn-more-text">
-        <h1 class="jumbotron-heading">Speech Therapy</h1>
+        <h1 class="jumbotron-heading text-light">Speech Therapy</h1>
         <p class="lead-text text-light">Allied health services such as speech and occupational therapy enable people to participate in society better - 
     through access to education, employment and social interactions. In rural and remote Australia, children in need are often unable to these services.</p>
         <p class="jumbotron-heading text-light">Enter Umbo.</p>
