add specialty to patients

--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -3,7 +3,7 @@
 
     <h1 class="my-3 font-weight-normal">Enter details</h1>
 
-   <%= render 'form'%>
+   <%= render 'specialties'%>
 
   </div>
 </div>
