--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,31 +1,34 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <%= link_to 'Umbo', root_path, class: "navbar-brand"%>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div>
-    <% if user_signed_in? %>
-      <%= form_with url: search_index_path, method: :get, local: true do |f| %>
-        <%= f.text_field :search %>
-        <%= f.select :specialty, [["All", "*"], ["Specialty1", "specialty1"], ["Specialty2", "specialty2"], ["Specialty3", "specialty3"], ["Specialty4", "specialty4"], ["Specialty5", "specialty5"], ]%>
-        <%= f.submit  :search , class:"submit" %>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="topbar-left">
+      <%= link_to root_path, class: "navbar-brand" do%>
+        <%= image_tag 'logo.png' %>
       <% end %>
-    <% end %>
-  </div>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <ul class="navbar-nav ml-auto">
+        <%# <img alt="Brand" src="logo.png"> %>
+      </a>
+    </div>
+    <div class="topbar-right">
       <% if user_signed_in? %>
-        <li class="nav-item my-auto ">
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-item nav-link my-auto" %>
-        </li>
+        <a href="#">Dashboard</a>
+        <a href="#">Find a therapist</a>
+        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        <%= link_to root_path, class: "navbar-brand" do %>
+          <%= image_tag 'tommy.jpg', class: "rounded-circle" %>
+        <% end %>
       <% else %>
-        <li class="nav-item my-auto ">
-          <%= link_to "Login", new_user_session_path, class: "nav-item nav-link my-auto" %>
-        </li>
-        <li class="nav-item my-auto ">
-          <%= link_to "Sign Up", new_user_registration_path, class: "nav-item nav-link my-auto" %>
-        </li>
+        <a href="#">Find a therapist</a>
+        <a href="#">Clinicians sign up</a>
+        <a href="#">About us</a>
+        <%= link_to "Login", new_user_session_path %>
+        <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default navbar-btn" %>
       <% end %>
-    </ul>
+    </div>
   </div>
 </nav>
+
+
+<%#= form_with url: search_index_path, method: :get, local: true do |f| %>
+  <%#= f.text_field :search %>
+  <%#= f.select :specialty, [["All", "*"], ["Specialty1", "specialty1"], ["Specialty2", "specialty2"], ["Specialty3", "specialty3"], ["Specialty4", "specialty4"], ["Specialty5", "specialty5"], ]%>
+  <%#= f.submit  :search , class:"submit" %>
+<%# end %>
