Made style resemble squarespace.

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <%= link_to 'Umbo', root_path, class: "navbar-brand"%>
+<nav class="navbar navbar-expand-sm navbar-custom">
+  <%= link_to image_tag("umbo-logo.png", class: "navbar-logo"), root_path, class: "navbar-brand py-3" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
