--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+ @import "bootstrap";
+ @import "variables";
+
 * {
   margin: 0;
   padding: 0;
@@ -21,4 +24,10 @@
 
  .max-width-300 {
   max-width: 300px;
+}
+
+body {
+  background: #f5f5f5;
+  color: $umbo_text;
+  font-family: 'Nunito', sans-serif;
 }
