--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -31,11 +31,11 @@
       </div>
        <div class="form-group">
         <%= f.label :ndis_number, class: "sr-only" %>
-        <%= f.number_field :ndis_number, placeholder: "NDIS Number", class: "form-control" %>
+        <%= f.text_field :ndis_number, placeholder: "NDIS Number", class: "form-control" %>
       </div>
       <div class="form-group">
         <%= f.label :postcode, class: "sr-only" %>
-        <%= f.number_field :postcode, placeholder: "postcode", class: "form-control" %>
+        <%= f.text_field :postcode, placeholder: "postcode", class: "form-control" %>
       </div>
 
  <div class="form-group">
