--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,7 +1,11 @@
+<h1 class="my-3 font-weight-normal" style="text-align:center">
+    Hi <%=current_user.first_name%>, please enter information about your child
+    </h1>
 <div class="container max-width-300">
+ 
   <div class="d-flex flex-column align-items-center text-center">
 
-    <h1 class="my-3 font-weight-normal">Enter details</h1>
+   
 
    <%= render 'specialties'%>
 
