--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,3 +47,18 @@ body {
     }
   }
 }
+
+.profile-head{
+  display: inline;
+}
+
+.profile-image{
+  border-radius: 50%;
+}
+
+#availability {
+  margin-top:60px;
+}
+.container{
+  margin:24px;
+}
