--- a/app/views/therapists/show.html.erb
+++ b/app/views/therapists/show.html.erb
@@ -1,14 +1,27 @@
-<h1><%= @therapist.user.first_name %> <%= @therapist.user.last_name %></h1>
+<div class="container">
+  <div class="d-flex justify-content-between">
 
-<%= image_tag @therapist.profile_image_url %>
+    <div class="container">
+      <%= image_tag @therapist.profile_image_url, class: "profile-image" %>
+      <h1 class="profile-head"><%= @therapist.user.first_name %> <%= @therapist.user.last_name %></h1>
+      <div class="d-flex bd-highlight float-right" id="availability">
+        <a href="mailto:<%= @therapist.user.email %>" class="btn btn-primary btn-lg">Contact</a>
+      </div>
+  </div>
+</div>
 
-<h3>Specialties</h3>
-
+<div class="container">
+  <h3>About Me</h3>
+  <div class="card">
+    <div class="card-body">
+      <%=  @therapist.about_me %>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <h3>Areas of Interest</h3>
   <% @therapist.specialties.each do |specialty| %>
-    <div class= "btn btn-sm btn-primary">
+    <div class= "btn btn-sm btn-outline-primary">
       <%= specialty.name %>
     </div>
   <% end %>
-
-<h3>About Me</h3>
-<%=  @therapist.about_me %>
