--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,7 +3,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="topbar-left">
-    <%= link_to image_tag("umbo-logo.png", class: "navbar-logo"), "https://umbo.com.au", class: "navbar-brand py-3" %>
+    <%= link_to image_tag("umbo-logo.png", class: "navbar-logo"), root_path, class: "navbar-brand py-3" %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
