--- a/app/views/therapists/show.html.erb
+++ b/app/views/therapists/show.html.erb
@@ -2,7 +2,9 @@
   <div class="d-flex justify-content-between">
 
     <div class="container">
-      <%= image_tag @therapist.profile_image_url, class: "profile-image" %>
+      <% if @therapist.profile_image? %>
+        <%= image_tag @therapist.profile_image_url, class: "profile-image" %>
+      <% end%>
       <h1 class="profile-head"><%= @therapist.user.first_name %> <%= @therapist.user.last_name %></h1>
       <div class="d-flex bd-highlight float-right" id="availability">
         <a href="mailto:<%= @therapist.user.email %>" class="btn btn-primary btn-lg">Contact</a>
