--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.submit "Sign up", class: "btn btn-success form-control" %>
+        <%= f.submit "Sign Up", class: "btn btn-success form-control" %>
       </div>
 
     <% end %>
