--- a/app/views/patients/_specialties.html.erb
+++ b/app/views/patients/_specialties.html.erb
@@ -56,6 +56,6 @@
     <%= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
   <% end %>
     <div class="form-group">
-        <%= f.submit "Sign up", class: "btn btn-success form-control" %>
+        <%= f.submit "Save", class: "btn btn-success form-control" %>
       </div>
 <% end %>
