--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,2 +1,7 @@
 <h1><%= @patient.user.first_name %> <%= @patient.user.last_name %></h1>
-
+<div> <strong> Phone:</strong> <%= @patient.user.phone %></div>
+<div> <strong> Email:</strong> <%= @patient.user.email %></div>
+<h3>Notes</h3>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos voluptatibus voluptas et laboriosam? Molestias quasi, ea optio deserunt nobis unde quis tempore, labore accusantium magnam cupiditate. Amet praesentium asperiores non.
+</p>
