--- a/app/views/therapists/_form.html.erb
+++ b/app/views/therapists/_form.html.erb
@@ -1,10 +1,8 @@
 <%= form_with(model: therapist, local: true) do |form| %>
   <div>
-    <%= form.label :about_me %>
-    <%= form.text_area :about_me %>
+    <%= form.text_area :about_me, class: "form-control" %>
   </div>
   <div>
-    <%= form.label :profile_image %>
     <%= form.file_field :profile_image %>
   </div>
   <h3>Age Groups</h3>
