--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,10 +14,14 @@
       <%= link_to "Find a Therapist", search_index_path, class: "nav-item nav-link my-auto" %>
       <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-item nav-link my-auto" %>
       <% if current_user.patient? and !current_user.patient.nil?%>
-      <%= link_to edit_patient_path(current_user.patient.id), class: "navbar-brand" do %>
-        <%= image_tag 'people.png', class: "rounded-circle" %>
+        <%= link_to edit_patient_path(current_user.patient.id), class: "navbar-brand" do %>
+          <%= image_tag 'people.png', class: "rounded-circle" %>
         <%end%>
-        <%end%>
+      <% elsif current_user.therapist? && !current_user.therapist.nil? %>
+          <%= link_to edit_therapist_path(current_user.therapist.id), class: "navbar-brand" do %>
+            <%= image_tag 'people.png', class: "rounded-circle" %>
+          <%end%>
+      <%end%>
     <% else %>
       <a href="https://umbo.com.au" class="nav-item nav-link my-auto">About us</a>
       <%= link_to "Login", new_user_session_path, class: "nav-item nav-link my-auto" %>
