fix therapist id for setting in controller

--- a/app/views/therapists/_form.html.erb
+++ b/app/views/therapists/_form.html.erb
@@ -6,32 +6,36 @@
   <div>
     <%= form.file_field :profile_image %>
   </div>
-  <h3>Age Groups</h3>
-  <%= form.collection_check_boxes(:specialties, Specialty.all.limit(2), :id, :name ) do |f| %>
+  <%= form.collection_check_boxes(:specialty_ids, Specialty.all, :id, :name ) do |f| %>
     <%= f.check_box class: "sr-only" %>
     <%= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
   <% end %>
+  <%# <h3>Age Groups</h3> %>
+  <%#= form.collection_check_boxes(:specialties, Specialty.all.limit(2), :id, :name ) do |f| %>
+    <%#= f.check_box class: "sr-only" %>
+    <%#= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+  <%# end %>
   <h3>Medical condition</h3>
-  <%= form.collection_check_boxes(:specialties, Specialty.all.limit(4).offset(2), :id, :name ) do |f| %>
-    <%= f.check_box class: "sr-only" %>
-    <%= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
-  <% end %>
+  <%#= form.collection_check_boxes(:specialties, Specialty.all.limit(4).offset(2), :id, :name ) do |f| %>
+    <%#= f.check_box class: "sr-only" %>
+    <%#= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+  <%# end %>
   <h3>Speech</h3>
-  <%= form.collection_check_boxes(:specialties, Specialty.all.limit(4).offset(6), :id, :name ) do |f| %>
-    <%= f.check_box class: "sr-only" %>
-    <%= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
-  <% end %>
+  <%#= form.collection_check_boxes(:specialties, Specialty.all.limit(4).offset(6), :id, :name ) do |f| %>
+    <%#= f.check_box class: "sr-only" %>
+    <%#= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+  <%# end %>
   <h3>Motor & Sensory</h3>
-  <%= form.collection_check_boxes(:specialties, Specialty.all.limit(3).offset(10), :id, :name ) do |f| %>
-    <%= f.check_box class: "sr-only" %>
-    <%= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
-  <% end %>
+  <%#= form.collection_check_boxes(:specialties, Specialty.all.limit(3).offset(10), :id, :name ) do |f| %>
+    <%#= f.check_box class: "sr-only" %>
+    <%#= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+  <%# end %>
   <h3>Communication & Behaviour</h3>
-  <%= form.collection_check_boxes(:specialties, Specialty.all.limit(3).offset(13), :id, :name ) do |f| %>
-    <%= f.check_box class: "sr-only" %>
-    <%= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
-<%end%>
- <div class="form-group">
-        <%= form.submit "Update", class: "btn btn-success" %>
-      </div>
+  <%#= form.collection_check_boxes(:specialties, Specialty.all.limit(3).offset(13), :id, :name ) do |f| %>
+    <%#= f.check_box class: "sr-only" %>
+    <%#= f.label class: "btn btn-sm btn-outline-primary btn-blue-toggle" %>
+  <%# end%>
+  <div class="form-group">
+    <%= form.submit "Update", class: "btn btn-success" %>
+  </div>
 <% end %>
