--- a/app/views/layouts/_userthumb.html.erb
+++ b/app/views/layouts/_userthumb.html.erb
@@ -1,4 +1,4 @@
-<%= link_to therapist_path(user.user.id), class: "card-block" do %>
+<%= link_to therapist_path(user.id), class: "card-block" do %>
   <div class="card my-3 mx-3">
     <% unless user.profile_image? %>
       <%= image_tag asset_path("noimage.png"), class: "card-img-top", alt: "Card image cap"%>
