fix navbar, change sessions to appointments in views, add permission checks in patient and therapist controller

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Session</h1>
+<h1>Editing Appointment</h1>
 
-<%= render 'form', session: @session %>
+<%= render 'form', appointment: @appointment %>
 
-<%= link_to 'Show', @session %> |
-<%= link_to 'Back', sessions_path %>
+<%= link_to 'Show', @appointment %> |
+<%= link_to 'Back', appointments_path %>
