--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Session</h1>
+<h1>New Appointment</h1>
 
-<%= render 'form', session: @session %>
+<%= render 'form', appointment: @appointment %>
 
-<%= link_to 'Back', sessions_path %>
+<%= link_to 'Back', appointments_path %>
