--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,23 +12,39 @@
     <ul class="navbar-nav ml-auto">
     <% if user_signed_in? %>
       <% if current_user.admin? %>
-        <%= link_to "Add Therapist", new_therapist_user_path, class: "nav-item nav-link my-auto" %>
+        <li class="nav-item my-auto">
+          <%= link_to "Add Therapist", new_therapist_user_path, class: "nav-link my-auto" %>
+        </li>
       <% end %>
-      <%= link_to "Find a Therapist", search_index_path, class: "nav-item nav-link my-auto" %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-item nav-link my-auto" %>
+      <li class="nav-item my-auto">
+        <%= link_to "Find a Therapist", search_index_path, class: "nav-link my-auto" %>
+      </li>
+      <li class="nav-item my-auto">
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link my-auto" %>
+      </li>
       <% if current_user.patient? and !current_user.patient.nil?%>
-        <%= link_to edit_patient_path(current_user.patient.id), class: "navbar-brand" do %>
-          <%= image_tag 'people.png', class: "rounded-circle" %>
-        <%end%>
+        <li class="nav-item my-auto">
+          <%= link_to edit_patient_path(current_user.patient.id), class: "navbar-brand" do %>
+            <%= image_tag 'people.png', class: "rounded-circle" %>
+          <%end%>
+        </li>
       <% elsif current_user.therapist? && !current_user.therapist.nil? %>
+        <li class="nav-item my-auto">
           <%= link_to edit_therapist_path(current_user.therapist.id), class: "navbar-brand" do %>
             <%= image_tag 'people.png', class: "rounded-circle" %>
           <%end%>
+        </li>
       <%end%>
     <% else %>
-      <a href="https://umbo.com.au" class="nav-item nav-link my-auto">About us</a>
-      <%= link_to "Login", new_user_session_path, class: "nav-item nav-link my-auto" %>
-      <%= link_to "Sign Up", new_user_registration_path, class: "nav-item nav-link my-auto" %>
+      <li class="nav-item my-auto">
+        <a href="https://umbo.com.au" class="nav-link my-auto">About us</a>
+      </li>
+      <li class="nav-item my-auto">
+        <%= link_to "Login", new_user_session_path, class: "nav-link my-auto" %>
+      </li>
+      <li class="nav-item my-auto">
+        <%= link_to "Sign Up", new_user_registration_path, class: "nav-link my-auto" %>
+      </li>
     <% end %>
     </ul>
   </div>
