--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       <%= yield %>
 
 
-    <!-- Footer -->
+    <%# <!-- Footer -->
 <footer class="page-footer font-small" style="background-color:#343a40!important">
 
   <!-- Copyright -->
@@ -46,7 +46,7 @@
   <!-- Copyright -->
 
 </footer>
-<!-- Footer -->
+<!-- Footer --> %>
 
     <!-- Bootstrap 4 -->
 
