--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,29 +1,27 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Date:</strong>
-  <%= @session.date %>
+  <%= @appointment.date %>
 </p>
 
 <p>
   <strong>Start time:</strong>
-  <%= @session.start_time %>
+  <%= @appointment.start_time %>
 </p>
 
 <p>
   <strong>End time:</strong>
-  <%= @session.end_time %>
+  <%= @appointment.end_time %>
 </p>
 
 <p>
   <strong>Payment date:</strong>
-  <%= @session.payment_date %>
+  <%= @appointment.payment_date %>
 </p>
 
 <p>
   <strong>Total cost:</strong>
-  <%= @session.total_cost %>
+  <%= @appointment.total_cost %>
 </p>
 
-<%= link_to 'Edit', edit_session_path(@session) %> |
-<%= link_to 'Back', sessions_path %>
+<%= link_to 'Edit', edit_appointment_path(@appointment) %> |
+<%= link_to 'Back', appointments_path %>
