--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,9 +1,9 @@
-<div class="container max-width-300">
+<div class="container mx-auto">
   <div class="d-flex flex-column align-items-center text-center">
 
     <h1 class="my-3 font-weight-normal">Enter details</h1>
 
-   <%= render 'specialties'%>
+    <%= render 'form', patient: @patient%>
 
   </div>
 </div>
