--- a/app/views/therapists/edit.html.erb
+++ b/app/views/therapists/edit.html.erb
@@ -1,1 +1,7 @@
-<%= render 'form', therapist: @therapist %>
+<div class="container mx-auto">
+  <div class="d-flex flex-column align-items-center text-center">
+
+    <%= render 'form', therapist: @therapist %>
+
+  </div>
+</div>
